--- a/README.Rmd
+++ b/README.Rmd
@@ -13,7 +13,7 @@ Software for the interpretation of complex DNA profiles based on the information
 ## Installation
 Installation for Windows: Open R (v4.2 or newer) and write
 ```{r, eval = FALSE}
-install.packages('http://euroformix.com/sites/default/files/euroformix_4.2.0.zip',repos=NULL,type='win.binary')
+install.packages('http://euroformix.com/sites/default/files/euroformix_4.2.1.zip',repos=NULL,type='win.binary')
 install.packages(c('numDeriv','gWidgets2tcltk','cubature','XML','curl','plotly'))
 
 #Run EuroForMix (GUI)
@@ -24,8 +24,8 @@ Also possible to download zip file from https://github.com/oyvble/euroformix/rel
 
 Alternative installation directly from source through GitHub (requires R-tools):
 ```{r, eval = FALSE}
-install.packages("devtools")
-devtools::install_github("oyvble/euroformix")
+install.packages("remotes")
+remotes::install_github("oyvble/euroformix")
 ```
 
 Info about suggested R-packages (all are optional to install):\
